Complete the comment section on feed

--- a/frontend/src/components/post/post.css
+++ b/frontend/src/components/post/post.css
@@ -37,3 +37,11 @@
     overflow: hidden;
     border-radius: 5px;
 }
+
+.comment-bottom-line{
+    height: 1px;
+}
+
+.emo{
+    transition: transform 0.3s;
+}
