--- a/src/containers/post/post.css
+++ b/src/containers/post/post.css
@@ -37,3 +37,11 @@
   .dragdrop input{
     display: none;
   }
+
+  .newPostImage{
+    width: 300px;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-top: 20px;
+  }
