--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,4 +1,4 @@
-.image{
+.image {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.image img{
+.image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -15,22 +15,17 @@
     border-radius: 35px;
 }
 
-.data-user-name-date .mx-2{
+.data-user-name-date .mx-2 {
     height: 4px;
     width: 4px;
     border-radius: 2px;
 }
 
-.feedSection_post{
+.feedSection_post {
     margin: 0 110px;
 }
 
-.image-outline{
-    width: 100%;
-    height:550px;
-}
-
-.image-outline img{
+.image-outline img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -38,10 +33,18 @@
     border-radius: 5px;
 }
 
-.comment-bottom-line{
+.comment-bottom-line {
     height: 1px;
 }
 
-.emo{
+.emo {
     transition: transform 0.3s;
+}
+
+.image-outline {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-top: 20px;
 }
